--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.4s;
 }
 .light #switch button {
   animation: slide-in 0.4s forwards;
@@ -174,5 +175,14 @@ footer ion-icon:hover {
   }
   to {
     left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
